# solo-toolkit

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/solo_toolkit/: cli.py
src/solo_toolkit/dice/: __init__.py  lexer.py  nodes.py  parser.py  roller.py  writer.py
